# wows-depack

./: .gitignore  CMakeLists.txt  FORMAT.md  LICENSE  README.md  REVERSING_STORY.md  _f_o_r_m_a_t_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classes.html  dir_bfccd401955b95cf8c75461437045ac0.html  dir_bfccd401955b95cf8c75461437045ac0.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  md__f_o_r_m_a_t.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  struct_w_o_w_s___c_o_n_t_e_x_t.html  struct_w_o_w_s___c_o_n_t_e_x_t.js  wows-depack.c  wows-depack_8h.html  wows-depack_8h.js  wows-depack_8h_source.html
.github/workflows/: codeql.yml  coverall.yml  doxygen.yml  ubuntu-x86_64.yml
cmake/: FindPCRE.cmake  FindPCRE2.cmake
docs/: Doxyfile.in  layout.xml
inc/: hashmap.h  wows-depack.h
lib/: debug.c  deflate.c  error-helpers.c  error.c  extract.c  hashmap-helpers.c  hashmap.c  hashmap.h  index-parser.c  index-printer.c  index-writer.c  inflate.c  inode.c  memory-helpers.c  regex-helpers.c  search.c  utils.c  wows-depack-private.h  writer.c
misc/: format  setup_doxycss.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  (+8 more)
tests/: tests.c
tests/corrupted/: id:000000,sig:11,src:000074,time:10154,execs:39852,op:havoc,rep:4  id:000001,sig:11,src:000089,time:12154,execs:47757,op:havoc,rep:1
tests/data/: fake.idx  fake2.idx
wows_sim_dir/res_packages/: stuff.pkg
